--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <body>
   <nav class="site-header">
     <div class="nav-logo">
-      <a href="index.html">
+      <!-- <a href="index.html">
         <img src="assets/images/logo.png" alt="logo" width="314" height="60">
-      </a>
+      </a> -->
     </div>
     <button class="hamburger"><img src="assets/images/menu.png" alt="menu toggle icon"></button>
     <div class="nav-links">
@@ -54,7 +54,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
-  </nav><!-- .site-header -->
+  </nav><!--.site-header -->
   <section class="banner">
     <div class="banner--content"
     data-aos="fade-in"
@@ -64,7 +64,7 @@
       <h1 class="designation">Freelance graphic designer</h1>
       <p class="tagline">If you&apos;re writer or something else, change the title as per your profession.</p>
     </div>    
-  </section><!-- .banner -->
+  </section>
   <section class="promo">
     <div class="content"
     data-aos="fade-up"
